# soapsniffer

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  soapsniff.c
