## Process this file with automake to produce Makefile.in


AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -O3\
	 -fPIC

bin_PROGRAMS = soapsniff

soapsniff_SOURCES = \
	soapsniff.c

soapsniff_LDFLAGS = 

